[gd_scene load_steps=19 format=2]

[ext_resource path="res://Resources/Fonts/Montserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Styles/styleBoxLineBlack.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Containers/NewTaskDialog.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.541176, 0.541176, 0.541176, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.313726, 0.639216, 0.376471, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.513726, 0.733333, 0.505882, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.313726, 0.639216, 0.376471, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.513726, 0.733333, 0.505882, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.345098, 0.721569, 0.419608, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.552941, 0.545098, 1, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.345098, 0.721569, 0.419608, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.580392, 0.835294, 0.572549, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.505882, 0.278431, 0.278431, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.596078, 0.419608, 0.419608, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.447059, 0.247059, 0.247059, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.513726, 0.360784, 0.360784, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.584314, 0.317647, 0.317647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.686275, 0.482353, 0.482353, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="NewTaskDialog" type="WindowDialog"]
margin_top = 80.0
margin_right = 444.0
margin_bottom = 414.0
custom_constants/close_h_ofs = 26
custom_constants/close_v_ofs = -10
custom_constants/title_height = -42
custom_fonts/title_font = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
window_title = "Nueva tarea"
script = ExtResource( 4 )

[node name="HSeparator" type="HSeparator" parent="."]
anchor_right = 1.0
margin_top = 46.0
margin_bottom = 50.0
custom_styles/separator = ExtResource( 2 )

[node name="TaskDescription" type="Label" parent="."]
margin_left = 5.0
margin_top = 63.0
margin_right = 306.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Descripci√≥n de la nueva tarea:"

[node name="MaxLength" type="Label" parent="."]
margin_left = 369.0
margin_top = 63.0
margin_right = 438.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "103/103"

[node name="HSeparator2" type="HSeparator" parent="."]
anchor_right = 1.0
margin_left = 5.0
margin_top = 93.0
margin_right = -5.0
margin_bottom = 97.0

[node name="TextEdit" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -65.0
margin_right = 218.0
margin_bottom = 91.0
rect_clip_content = true
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
wrap_enabled = true

[node name="CreateButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.5
margin_top = -57.0
margin_right = -11.5
margin_bottom = -19.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Crear tarea"

[node name="CancelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 17.5
margin_top = -57.0
margin_right = 141.5
margin_bottom = -19.0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 11 )
text = "Cancelar"

[connection signal="popup_hide" from="." to="." method="_on_hide"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
